# FlowFetch

./: .gitignore  README.md  README.zh-CN.md  downloader.py  flowfetch.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: TODO-v2.0.md
release/: README.txt  v0.1.0.md
scripts/: generate_demo_gif.py  generate_social_preview.py
